# arkana-fts

./: .gitattributes  PLEASE_README.TXT  README.md  build.sh  credits.txt  doxygen.cfg  v.i5
fts/: .gitignore  CMakeLists.txt  INSTALL  LICENSE-SimPL.txt  PLEASE_README.TXT  build.sh  masterservers  v.i
fts/3d/: 3d.cpp  3d.h  ErrorMesh.cpp  HardwareModel.cpp  HardwareModel.h  Math.h  ModelInstance.cpp  ModelInstance.h  ModelManager.cpp  ModelManager.h  Renderer.cpp  Renderer.h  Resolution.cpp  Resolution.h  Shader.cpp  Shader.h  VertexArrayObject.cpp  VertexArrayObject.h  camera.cpp  camera.h  light.cpp  light.h  opengl_wrapper.cpp  opengl_wrapper.h
fts/3d/Movers/: Mover.cpp  Mover.h  Orbiter.cpp  Orbiter.h  Rotator.cpp  Rotator.h  Translator.cpp  Translator.h
fts/3d/math/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h
fts/Data/Scripts/: EasterEggs.dao  MapHotkeys.dao  MapLoad.dao  SoundEffects.dao  global_vars.dao  hotkeys.dao  importTest.dao  loadMenuSounds.dao  process2.dao  test.dao  test2.dao  testContext.dao  testContext2.dao  testHotkey.dao
fts/Data/Shaders/: BasicLighting.shadinc  Lighting.fraginc  Lighting.vertinc  Model.vert  RigDeform.Skeletal.vertinc  Texturing.fraginc  Texturing.shadinc  Texturing.vertinc  __FTS__OnlyLighting.frag  __FTS__RiggedModel.vert  __FTS__StaticModel.vert  __FTS__TnL.frag
fts/cmake/: FindFreeType.cmake  FindMYSQL.cmake  FindOpenALAndALUT.cmake
fts/dLib/aTest/: CMakeLists.txt  Doxygen.css  Test.cpp  Test.h  TestHarness.h  TestRegistry.cpp  TestRegistry.h  TestResult.cpp  TestResult.h  TestResultCombiner.cpp  TestResultCombiner.h  TestResultCompiler.cpp  TestResultCompiler.h  TestResultDebugOut.cpp  TestResultDebugOut.h  TestResultNiceOutput.cpp  TestResultNiceOutput.h  TestResultSQL.cpp  TestResultSQL.h  TestSuite.cpp  TestSuite.h  makefile  peetsa.dox
fts/dLib/dArchive/: dArchive.cpp  dArchive.h
fts/dLib/dBrowse/: dBrowse.h  linux.cpp  windows.cpp
fts/dLib/dCompressor/: dCompressor.cpp  dCompressor.h  minilzo_compressor.cpp  minilzo_compressor.h
fts/dLib/dConf/: ArkanaDefaultSettings.cpp  ArkanaDefaultSettings.h  DefaultOptions.cpp  DefaultOptions.h  configuration.cpp  configuration.h
fts/dLib/dFile/: dBrowse.cpp  dBrowse.h  dFile.cpp  dFile.h
fts/dLib/dMem/: dMem.h
fts/dLib/dProcess/: dProcess.cpp  dProcess.h
fts/dLib/dString/: dPath.cpp  dPath.h  dString.cpp  dString.h  dTranslation.cpp
fts/documents/: accs_gamejoin_host.txt  entwicklung-idee.odt  todo.txt
fts/documents/cegui/: CEGUIFont.cpp.diff
fts/game/: game_rlv.cpp  game_rlv.h  loadgame_rlv.cpp  loadgame_rlv.h  player.cpp  player.h  player_og.cpp
fts/game/objects/: objects.h  tree.cpp  unit.h
fts/graphic/: Color.cpp  Color.h  anim.cpp  anim.h  errtex.h  graphic.cpp  graphic.h  image.cpp  image.h
fts/input/: Cursor.cpp  InputConstants.h  InputManager.cpp  input.h  keys.cpp
fts/logging/: Chronometer.h  MinimalLogger.cpp  MinimalLogger.h  MsgType.h  ftslogger.cpp  ftslogger.h  logger.h
fts/main/: Clock.cpp  Clock.h  Exception.cpp  Exception.h  Updateable.cpp  Updateable.h  defines.h  load_fts_rlv.cpp  load_fts_rlv.h  main.cpp  main.h  revision.h  revision.h.in  runlevels.cpp  runlevels.h  support.h  version.cpp  version.h  workarounds.h
fts/map/: DecorativeMO.cpp  DecorativeMO.h  MapObject.cpp  MapObject.h  forest.cpp  forest.h  map.cpp  mapinfo.cpp  mapinfo.h  quad.cpp  quad.h  terrain.cpp  tile.cpp  tile.h
fts/mdlviewer/: mdlviewer_main.cpp  mdlviewer_main.h
fts/net/: connection.cpp  connection.h  connection_old.cpp  connection_old.h  packet.cpp  packet.h  packet_header.h
fts/scripting/: DaoFunction.cpp  DaoFunction.h  DaoVm.cpp  DaoVm.h  Music.cpp  Music.h  dao_snd.cpp  dao_snd.h  dao_snd2.cpp  dao_snd3.cpp  hotkey.cpp  hotkey.h  test.dao
fts/sound/: SndFile.cpp  SndFile.h  SndGrp.cpp  SndGrp.h  SndObj.h  SndObjNone.h  SndObjOpenAL.cpp  SndObjOpenAL.h  SndPlayList.cpp  SndPlayList.h  SndSys.cpp  SndSys.h  SndSysNone.h  SndSysOpenAL.cpp  SndSysOpenAL.h  SndTypes.h  fts_Snd.h  sndobjpool.h
fts/tests/: CMakeLists.txt  mainCompiler.cpp  mainNice.cpp
fts/tests/3d/: ResolutionTest.cpp  ShaderTest.cpp
fts/tests/Configuration/: FTSConfiguration.cpp  Settings.cpp  Settings.h  conf.xml  messages.xml
fts/tests/Scripting/: DaoVmTest.cpp
fts/tests/dLib/: dBrowseTest.cpp
fts/tests/main/: ClockTest.cpp
fts/tests/utilities/: DataContainerTest.cpp
fts/tools/: README.txt  main.h  toolcompat.cpp  toolcompat.h
fts/tools/TilesetMaker/: Doxyfile  Makefile  TilesetMaker.kdevelop.pcs  tilesetmaker.kdevses
fts/tools/anim_maker/: Form1.resx  ReadMe.txt  anim_maker.cpp  anim_maker.sln  anim_maker.vcproj
fts/tools/devs_map_builder/: devs_map_builder.sln  devs_map_builder.vcproj  main.cpp  map_complex_quads.conf  map_quads.conf  map_tiles.conf  map_uppertiles.conf
fts/tools/fts_miniupdater/: Makefile  crc32.cpp  fts_miniupdater.sln  fts_updater.vcproj  gmon.out  log.h  setup.h
fts/tools/fts_updater/: ConfigFileUpdate.cpp  ConfigFileUpdate.h  UIActionList.cpp  crc32.cpp  fts_updater.sln  fts_updater.vcproj  gmon.out  (+5 more)
fts/ui/: ScriptConsole.cpp  ScriptConsole.h  confirm_dialog.cpp  dlg_online_acctInfo.cpp  dlg_online_feedback.cpp  dlg_online_findGame.cpp  dlg_online_findGame.h  dlg_online_joinchannel.cpp  dlg_online_newGame.cpp  dlg_options.cpp  dlg_options.h  dlg_options_adv_video.cpp  file_dialog.cpp  file_dialog.h  ui.cpp  ui.h  ui_commands.cpp  ui_commands.h  ui_menu.cpp  ui_menu.h  ui_menu_online.cpp  ui_menu_online.h  ui_menu_online_main.cpp
fts/utilities/: DataContainer.cpp  DataContainer.h  DateTime.cpp  Math.h  PolymorphicCopyable.h  Singleton.cpp  Singleton.h  StreamedDataContainer.cpp  StreamedDataContainer.h  command.cpp  command.h  console.cpp  console.h  fps_calculator.h  parse.cpp  parse.h  radix.cpp  string_file.cpp  threading.cpp  threading.h  utilities.cpp  utilities.h
fts/windows/: FTS.vcxproj  FTS.vcxproj.filters  fts.sln
tools/devs_map_builder/: CMakeLists.txt  main.cpp  map_info.conf  map_quads.conf
tools/ftsblends/: CMakeLists.txt
(+549 files in other folders)
